prevent clipboard button from jumping during drag

--- a/contentcuration/contentcuration/static/less/queue.less
+++ b/contentcuration/contentcuration/static/less/queue.less
@@ -52,6 +52,7 @@
 		background-color: transparent;
 		border-radius: 0px;
 		pointer-events: all;
+		border: 3px solid transparent;
 		&:hover { color: @queue-color; }
 		.badge{
 			background-color: @blue-500;
@@ -64,7 +65,7 @@
 	    pointer-events: none;
       	position: relative;
       	padding: 0px 0px 35px 15px;
-    	margin: 0px 0px -35px -15px;
+		margin: 0px 0px -35px -15px;
 
 	    .drop_text{
 	    	visibility: hidden;
